chore: initial commit

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@schoolassist/ory-helpers",
   "author": "Nick Verbraecken",
   "version": "0.1.0",
+  "private": false,
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
